sem-2-week-2-3 update v1

--- a/semester-2/week-2.html
+++ b/semester-2/week-2.html
@@ -302,6 +302,64 @@
                 </div>
             </section>
 
+            <!-- ROW 2 — SPLIT ROW -->
+            <section class="exp-row split">
+                <div class="exp-block">
+                    <h3><strong>Visual Exploration</strong></h3>
+                </div>
+
+                <div class="exp-block">
+                    <p>Over the holidays, I received detailed feedback from my lecturers on both my dissertation and
+                        graduation project. This week's consultation provided an opportunity to revisit these comments
+                        together and unpack them more clearly. Through discussion, we clarified key issues around my
+                        <strong>third pillar: exhibition design</strong>, coherence, and how the work should come
+                        together moving forward.
+                    </p>
+                </div>
+            </section>
+
+            <!-- ROW 2 — SPLIT ROW -->
+            <section class="exp-row split">
+                <div class="exp-block">
+                    <h3><strong>Feedback</strong></h3>
+                </div>
+
+                <div class="exp-block">
+                    <h3><strong>➀ Media Saturation</strong></h3>
+                    <p>Building on Andreas’ interpretation of my identity-formation visuals, he read the work as a
+                        commentary on how we perceive media content today—specifically the overwhelming, continuous
+                        influx of information. He noted how content is consumed rapidly and discarded within seconds,
+                        and suggested that this could be developed further as a distorted or fragmented worldview shaped
+                        by fast-paced media consumption. This raised the question of whether my exploration could more
+                        explicitly address how social media conditions perception and attention.
+                    </p><br><br>
+                    <h3><strong>➁ Micro-Experiences</strong></h3>
+                    <p>A key concern was how these ideas could be communicated through micro-experiences. Andreas
+                        questioned how small, momentary interactions might be used to reflect the speed, repetition, and
+                        passivity of scrolling culture, and whether this logic could be subverted to deliver more
+                        meaningful or reflective content instead. The challenge is not only to replicate fast content
+                        delivery, but to interrupt it in a way that prompts awareness.
+                    </p><br><br>
+                    <h3><strong>➂ Aesthetic → Conceptual Grounding</strong></h3>
+                    <p>Andreas questioned my use of ASCII visuals, noting that they currently function primarily as an
+                        aesthetic choice rather than a conceptually grounded one. To move beyond surface-level visuals,
+                        the work needs a clearer narrative or motivation—whether through interaction, storytelling, or
+                        moving image—so that users understand why they are engaging with the work. Rather than
+                        encouraging mindless action, the experience should provoke self-reflection, such as questioning
+                        habitual behaviours like doom-scrolling.
+                    </p><br><br>
+                    <h3><strong>➃ Exhibition & Structural Coherence</strong></h3>
+                    <p>Given that the project’s outcome is an exhibition contribution, Andreas emphasised the need to
+                        think structurally: how many works are involved, how they connect, and how they collectively
+                        communicate a coherent idea. Instead of a single, monolithic piece, he suggested considering
+                        smaller, focused experiments—possibly multiple short interactions—where one clear action
+                        produces a visible system response. These micro-experiments could together visualise how systems
+                        shape perception and behaviour, making the underlying structure of media consumption more
+                        legible.
+                    </p><br><br>
+                </div>
+            </section>
+
             <!-- BOTTOM-RIGHT FLOATING NAV BUTTONS -->
             <div class="week-nav-controls">
                 <button class="week-nav-btn" id="prevWeek">←</button>
