--- a/semester-2/week-3.html
+++ b/semester-2/week-3.html
@@ -96,7 +96,8 @@
                 <div class="exp-block">
                     <p>This week marked a significant milestone as I was shortlisted for GDI after being selected by
                         lecturers to submit a critical essay. Following this, I attended an interview with our school's
-                        <strong>Dean, Nur</strong>.</p>
+                        <strong>Dean, Nur</strong>.
+                    </p>
                     <p>The interview provided an opportunity to articulate my research interests, how my project is
                         going, while reflecting how I can further improve or explore it. I received valuable,
                         insightful, and encouraging feedback from Nur.</p>
@@ -124,6 +125,23 @@
                         <strong>third pillar: exhibition design</strong>, coherence, and how the work should come
                         together moving forward.
                     </p>
+                </div>
+            </section>
+
+            <!-- ROW 2 — SPLIT ROW -->
+            <section class="exp-row split">
+                <div class="exp-block">
+                    <h3><strong>GDI Interview</strong></h3>
+                </div>
+
+                <div class="exp-block">
+                    <p>This week marked a significant milestone as I was shortlisted for GDI after being selected by
+                        lecturers to submit a critical essay. Following this, I attended an interview with our school's
+                        <strong>Dean, Nur</strong>.
+                    </p>
+                    <p>The interview provided an opportunity to articulate my research interests, how my project is
+                        going, while reflecting how I can further improve or explore it. I received valuable,
+                        insightful, and encouraging feedback from Nur.</p>
                 </div>
             </section>
 
