--- a/semester-2/week-1.html
+++ b/semester-2/week-1.html
@@ -100,21 +100,23 @@
                 </div>
             </section>
 
-            <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <a href="https://www.guggenheim.org/exhibition/gary-hill" target="_blank"
-                    style="text-decoration: none; color: inherit; display:block;">
 
-                    <video src="assets/videos/experimental-art.mp4" autoplay loop muted playsinline
-                        style="width:100%; height:100%; object-fit:cover;">
-                    </video>
+                <a href="https://www.guggenheim.org/exhibition/gary-hill" target="_blank" rel="noopener noreferrer"
+                    style="text-decoration:none; color:inherit; display:block;">
 
-                    <figcaption style="font-size: 12px; text-align: left;">
-                        <strong>Only the Young: Experimental Art in Korea, 1960s–1970s</strong>
-                        <em>Guggenheim New York</em>
+                    <div style="width:100%; aspect-ratio:16/9; overflow:hidden;">
+                        <img src="assets/images/s2-w1-hero.jpg" autoplay loop muted playsinline
+                            style="width:100%; height:100%; object-fit:cover;">
+                        </video>
+                    </div>
+
+                    <figcaption style="font-size:12px; text-align:left; margin-top:6px;">
+                        <strong>Gary Hill 1995</strong> <em>Guggenheim New York</em>
                     </figcaption>
 
                 </a>
+
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
@@ -204,6 +206,7 @@
                     <figcaption style="font-size:12px; margin-top:20px; text-align:center;">
                         <strong>Context / Scale</strong> <em>Diagram</em>
                     </figcaption>
+
                     <p>Importantly, this proposal does not need to be realised; it can exist as a speculative
                         contribution that could sit within a larger exhibition on algorithms, rather than a standalone
                         curated show. Framing my work as a contributor rather than a curator significantly narrows the
@@ -216,26 +219,32 @@
             <!-- ROW 2 — SPLIT ROW -->
             <section class="exp-row split">
                 <div class="exp-block">
-                    <h3><strong>Physical Prototype 1</strong></h3>
+                    <h3><strong>Case Studies</strong></h3>
                 </div>
-
                 <div class="exp-block">
-                    <p>Over the holidays, I received detailed feedback from my lecturers on both my dissertation and
-                        graduation project. This week's consultation provided an opportunity to revisit these comments
-                        together and unpack them more clearly. Through discussion, we clarified key issues around my
-                        <strong>third pillar: exhibition design</strong>, coherence, and how the work should come
-                        together moving forward.
+                    <p>To better understand how abstract systems can be translated into tangible, experiential forms, I
+                        researched existing physical works and material-based projects. These case studies demonstrate
+                        clear and intuitive relationship between user input, system response, as well as various
+                        Arduino-OLED projects which explore how small screens, minimal interfaces, and physical controls
+                        can communicate system states.
                     </p>
                 </div>
             </section>
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <a href="https://www.guggenheim.org/exhibition/gary-hill" target="_blank"
-                    style="text-decoration: none; color: inherit;">
-                    <img src="assets/images/s2-w1-hero.jpg" alt="">
-                    <figcaption style="font-size: 12px; text-align: left;"><strong>Gary Hill 1995</strong><em>
-                            Guggenheim New York</em></figcaption>
+                <a href="https://www.guggenheim.org/video/only-the-young-experimental-art-in-korea-1960s-1970s-at-the-guggenheim" target="_blank"
+                    style="text-decoration: none; color: inherit; display:block;">
+
+                    <video src="assets/videos/experimental-art.mp4" autoplay loop muted playsinline
+                        style="width:100%; height:100%; object-fit:cover;">
+                    </video>
+
+                    <figcaption style="font-size: 12px; text-align: left;">
+                        <strong>Only the Young: Experimental Art in Korea, 1960s–1970s</strong>
+                        <em>Guggenheim New York</em>
+                    </figcaption>
+
                 </a>
             </section>
 
@@ -325,6 +334,23 @@
 
                 </a>
 
+            </section>
+
+            <!-- ROW 2 — SPLIT ROW -->
+            <section class="exp-row split">
+                <div class="exp-block">
+                    <h3><strong>Findings</strong></h3>
+                </div>
+                <div class="exp-block">
+                    <p>From these case studies, I learnt that effective physical works prioritise legibility over
+                        complexity. Users should immediately understand how their actions influence the system without
+                        explanation. More importantly, these projects show that material choice and interaction design
+                        are not neutral, they actively shape how systems are perceived. This insight reinforces the need
+                        for my own prototypes to use physical materials <strong>not as decorative outputs</strong>, but
+                        as <strong>deliberate tools</strong> to make invisible computational processes visible,
+                        relatable, and experientially grounded.
+                    </p>
+                </div>
             </section>
 
             <!-- BOTTOM-RIGHT FLOATING NAV BUTTONS -->
