s2-w1-update vid before case studies

--- a/semester-2/week-1.html
+++ b/semester-2/week-1.html
@@ -216,6 +216,23 @@
                 </div>
             </section>
 
+            <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
+            <section class="exp-row full">
+                <a href="https://www.guggenheim.org/video/only-the-young-experimental-art-in-korea-1960s-1970s-at-the-guggenheim"
+                    target="_blank" style="text-decoration: none; color: inherit; display:block;">
+
+                    <video src="assets/videos/experimental-art.mp4" autoplay loop muted playsinline
+                        style="width:100%; height:100%; object-fit:cover;">
+                    </video>
+
+                    <figcaption style="font-size: 12px; text-align: left;">
+                        <strong>Only the Young: Experimental Art in Korea, 1960s–1970s</strong>
+                        <em>Guggenheim New York</em>
+                    </figcaption>
+
+                </a>
+            </section>
+
             <!-- ROW 2 — SPLIT ROW -->
             <section class="exp-row split">
                 <div class="exp-block">
@@ -229,23 +246,6 @@
                         can communicate system states.
                     </p>
                 </div>
-            </section>
-
-            <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
-            <section class="exp-row full">
-                <a href="https://www.guggenheim.org/video/only-the-young-experimental-art-in-korea-1960s-1970s-at-the-guggenheim" target="_blank"
-                    style="text-decoration: none; color: inherit; display:block;">
-
-                    <video src="assets/videos/experimental-art.mp4" autoplay loop muted playsinline
-                        style="width:100%; height:100%; object-fit:cover;">
-                    </video>
-
-                    <figcaption style="font-size: 12px; text-align: left;">
-                        <strong>Only the Young: Experimental Art in Korea, 1960s–1970s</strong>
-                        <em>Guggenheim New York</em>
-                    </figcaption>
-
-                </a>
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
