navbar typo fix + exp and ptyp head fix

--- a/experiments/experiment-5.html
+++ b/experiments/experiment-5.html
@@ -2,11 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>A-I: Experiment 5</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/favicon.png" />
-    <link rel="stylesheet" href="assets/styles.css">
+  <meta charset="UTF-8">
+  <title>A-I: E-5</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <base href="/algorithmic-identities/">
+
+  <link rel="icon" href="favicon.png" />
+  <link rel="stylesheet" href="/algorithmic-identities/assets/styles.css">
 </head>
 
 <body>
@@ -46,7 +49,7 @@
                         <li><a href="week12.html"><strong>W12</strong> : P-2</a></li>
                         <li><a href="week13.html"><strong>W13</strong> : Cohort Presentation</a></li>
                         <li><a href="week14.html"><strong>W14</strong> : P-3</a></li>
-                        <li><a href="week15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
+                        <li><a href="week15.html"><strong>W15</strong> : E-7 & P-4</a></li>
                     </ul>
                 </div>
 
@@ -58,7 +61,7 @@
 
                     <ul class="overview-weeks">
                         <li><a href="s2-week1.html"><strong>W1</strong> : SEM-1 Review</a></li>
-                        <li><a href="s2-week2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
+                        <li><a href="s2-week2.html"><strong>W2</strong> : E-8</a></li>
                         <li><a href="s2-week3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
                         <li><a href="week4.html"><strong>W4</strong> : </a></li>
                         <li><a href="week5.html"><strong>W5</strong> : </a></li>
