--- a/semester-1/week-1.html
+++ b/semester-1/week-1.html
@@ -49,7 +49,7 @@
                         <li><a href="semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
                         <li><a href="semester-1/week-13.html"><strong>W13</strong> : Cohort Presentation</a></li>
                         <li><a href="semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
-                        <li><a href="semester-1/week-15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
+                        <li><a href="semester-1/week-15.html"><strong>W15</strong> : E-7 & P-4</a></li>
                     </ul>
                 </div>
 
@@ -61,7 +61,7 @@
 
                     <ul class="overview-weeks">
                         <li><a href="semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
-                        <li><a href="semester-2/week-2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
+                        <li><a href="semester-2/week-2.html"><strong>W2</strong> : E8</a></li>
                         <li><a href="semester-2/week-3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
                     </ul>
                 </div>
