--- a/semester-2/week-2.html
+++ b/semester-2/week-2.html
@@ -48,7 +48,7 @@
                         <li><a href="semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
                         <li><a href="semester-1/week-13.html"><strong>W13</strong> : Cohort Presentation</a></li>
                         <li><a href="semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
-                        <li><a href="semester-1/week-15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
+                        <li><a href="semester-1/week-15.html"><strong>W15</strong> : E-7 & P-4</a></li>
                     </ul>
                 </div>
 
