catalogue page data-target fix v2

--- a/catalogue.html
+++ b/catalogue.html
@@ -106,60 +106,65 @@
           <div class="catalogue-circles" id="catalogueCircles">
 
             <!-- EXPERIMENTS -->
-            <div class="catalogue-circle" data-type="experiment" data-target="experiment-1.html"
+            <div class="catalogue-circle" data-type="experiment" data-target="experiments/experiment-1.html"
               data-preview="assets/videos/e1-hover.mp4" data-caption="E-1 — Playlist Visualiser">
               E-1
             </div>
 
-            <div class="catalogue-circle" data-type="experiment" data-target="experiment-2.html"
-              data-preview="assets/videos/e2-hover.mp4" data-caption="E-2 — ASCII Patterns">
+            <div class="catalogue-circle" data-type="experiment" data-target="experiments/experiment-2.html"
+              data-preview="assets/videos/e2-hover.mp4" data-caption="E-2 — Text Reduction">
               E-2
             </div>
 
-            <div class="catalogue-circle" data-type="experiment" data-target="experiment-3.html"
+            <div class="catalogue-circle" data-type="experiment" data-target="experiments/experiment-3.html"
               data-preview="assets/videos/e3-hover.mp4" data-caption="E-3 — Typographic Network">
               E-3
             </div>
 
-            <div class="catalogue-circle" data-type="experiment" data-target="experiment-4.html"
+            <div class="catalogue-circle" data-type="experiment" data-target="experiments/experiment-4.html"
               data-preview="assets/videos/e4-hover.mp4" data-caption="E-4 — Text Constellation">
               E-4
             </div>
 
-            <div class="catalogue-circle" data-type="experiment" data-target="experiment-5.html"
+            <div class="catalogue-circle" data-type="experiment" data-target="experiments/experiment-5.html"
               data-preview="assets/videos/e5-hover.mp4" data-caption="E-5 — Input Flux">
               E-5
             </div>
 
-            <div class="catalogue-circle" data-type="experiment" data-target="experiment-6.html"
-              data-preview="assets/videos/e6-hover.mp4" data-caption="E-6 — Input Flux">
+            <div class="catalogue-circle" data-type="experiment" data-target="experiments/experiment-6.html"
+              data-preview="assets/videos/e6-hover.mp4" data-caption="E-6 — From Gesture to Signal">
               E-6
             </div>
 
-            <div class="catalogue-circle" data-type="experiment" data-target="experiment-7.html"
-              data-preview="assets/videos/e7-hover.mp4" data-caption="E-7 — Input Flux">
+            <div class="catalogue-circle" data-type="experiment" data-target="experiments/experiment-7.html"
+              data-preview="assets/videos/e7-hover.mp4" data-caption="E-7 — ID://ASCII">
               E-7
+            </div>
+
+            <div class="catalogue-circle" data-type="experiment" data-target="experiments/experiment-7.html"
+              data-preview="assets/videos/e8-hover.mp4" data-caption="E-8 — Identity Contagion">
+              E-8
             </div>
 
 
             <!-- PROTOTYPES -->
-            <div class="catalogue-circle" data-type="prototype" data-target="prototype-1.html"
-              data-preview="assets/videos/p1-hover.mp4" data-caption="P-1 — Algorithmic Resonance">
+            <div class="catalogue-circle" data-type="prototype" data-target="prototypes/prototype-1.html"
+              data-preview="assets/videos/p1-hover.mp4" data-caption="P-1 — Feed Your Garden">
               P-1
             </div>
 
-            <div class="catalogue-circle" data-type="prototype" data-target="prototype-2.html"
-              data-preview="assets/videos/p2-visuals.mp4" data-caption="P-2 — Feed Intervention Interface (prototype).">
+            <div class="catalogue-circle" data-type="prototype" data-target="prototypes/prototype-2.html"
+              data-preview="assets/videos/p2-visuals.mp4" data-caption="P-2 — Encode Shape">
               P-2
             </div>
 
-            <div class="catalogue-circle" data-type="prototype" data-target="prototype-3.html"
-              data-preview="assets/videos/p3-hover.mp4" data-caption="P-3 — Exhibition Microsite (prototype).">
+            <div class="catalogue-circle" data-type="prototype" data-target="prototypes/prototype-3.html"
+              data-preview="assets/videos/p3-hover.mp4" data-caption="P-3 — Algorithmic Resonance">
               P-3
             </div>
 
-            <div class="catalogue-circle" data-type="prototype" data-target="prototype-4.html"
-              data-preview="assets/videos/p4-hover.mp4" data-caption="P-4 — Exhibition Microsite (prototype).">
+            <div class="catalogue-circle" data-type="prototype" data-target="prototypes/prototype-4.html"
+              data-preview="assets/videos/p4-hover.mp4" data-caption="P-4 — Reconstructed Self">
               P-4
             </div>
 
