catalogue page e8 and p5 data-target

--- a/catalogue.html
+++ b/catalogue.html
@@ -141,7 +141,7 @@
               E-7
             </div>
 
-            <div class="catalogue-circle" data-type="experiment" data-target="experiments/experiment-7.html"
+            <div class="catalogue-circle" data-type="experiment" data-target="experiments/experiment-8.html"
               data-preview="assets/videos/e8-hover.mp4" data-caption="E-8 — Identity Contagion">
               E-8
             </div>
@@ -166,6 +166,11 @@
             <div class="catalogue-circle" data-type="prototype" data-target="prototypes/prototype-4.html"
               data-preview="assets/videos/p4-hover.mp4" data-caption="P-4 — Reconstructed Self">
               P-4
+            </div>
+
+            <div class="catalogue-circle" data-type="prototype" data-target="prototypes/prototype-5.html"
+              data-preview="assets/videos/p5-hover.mp4" data-caption="P-5 — World of Brainrot">
+              P-5
             </div>
 
           </div>
